# ds210-sum26-code

./: hello.md
module_11_pointers/: README.md
module_12_ownership/: README.md
module_12_ownership/1_vec_of_strings/: Cargo.toml
module_12_ownership/1_vec_of_strings/src/: 1_dangling_pointer.rs  2_put_on_heap.rs  3_memory_leak.rs  4_manual_cleanup.rs  5_use_after_free.rs  6_boxes.rs
module_12_ownership/2_ownership/: Cargo.toml
module_12_ownership/2_ownership/src/: 1_box_use_after_free.rs  2_move_clone_borrow.rs
module_12_ownership/3_references/: Cargo.toml
module_12_ownership/3_references/src/: 1_references.rs  2_borrow_checker.rs
module_13_borrowing/: README.md
module_13_borrowing/1_references_are_safe/: Cargo.toml
module_13_borrowing/2_borrowing_rules/: Cargo.toml
module_13_borrowing/2_borrowing_rules/src/: 1_inactive_reference.rs  2_many_const_references.rs  3_drop_while_borrowed.rs
module_13_borrowing/3_permissions/: Cargo.toml
module_13_borrowing/3_permissions/src/: 1_read_write_own.rs  2_missing_write.rs  3_const_borrow.rs  4_mut_borrow.rs  5_borrow_of_mut_data.rs
module_14_lifetimes/1_why_lifetimes/: Cargo.toml
module_14_lifetimes/2_functions/: Cargo.toml
module_14_lifetimes/2_functions/src/: main.rs
module_14_lifetimes/3_structs/: Cargo.toml
module_17_concurrency/: Cargo.toml
module_17_concurrency/src/: 1-basic.rs  2-passing_data.rs  3-passing_data2.rs  4-mutex.rs
module_3_shell_and_terminal/: README.md  cat.sh  nasa.sh
module_4_rust_and_vscode/: README.md  script.sh
module_7_structs/: Cargo.toml
module_7_structs/src/: main.rs  types.rs
module_8_parameter_passing/: Cargo.toml
module_8_parameter_passing/src/: helpers.rs  main.rs
module_9_generics_traits/: README.md
module_9_generics_traits/1_occurences/: Cargo.toml
project_3_vec/: rust
project_4_client_server_analytics/client/: Cargo.toml
(+36 files in other folders)
